# vue-chatbots

./: README.md  main.py  pyproject.toml  pyvenv.cfg
app/: main.py
app/actions/: histories.py  prepare.py  workflows.py
app/llms/: __init__.py  response_schemas.py
app/ui/: __init__.py  chat.py  dialog.py  sidebar.py
fortune/: main.py
fortune/agent/: __init__.py  agents.py  events.py  exceptions.py  functions.py  workflow.py
fortune/agent/ui/: dialog.py
fortune/ui/: __init__.py  dialog.py  result.py  sidebar.py  title.py
vuechat/: main.py
vuechat/actions/: __init__.py  histories.py  workflows.py
vuechat/llms/: __init__.py  agents.py  gemini.py  ollama.py  qdrant.py  query_engine.py
vuechat/ui/: chat.py
