[project]
name = "vue-chatbots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "llama-index-core>=0.14.15",
    "llama-index-llms-google-genai>=0.8.7",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-vector-stores-qdrant>=0.9.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "streamlit>=1.55.0",
]
